clusters/production/apps/homarr/manifests/service-homarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  selector:
    app: homarr
  ports:
  - name: http
    port: 7575
    targetPort: 7575
